# spellbook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  fly.toml  justfile
api/: .gitignore  Cargo.toml  Dockerfile
api/src/: command.rs  github.rs  main.rs  open_ai.rs  vector_db.rs
src/: command.rs  github.rs  main.rs  open_ai.rs  utils.rs
web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/src/: command.rs  main.rs  web_sys_ext.rs
