[package]
name = "spellbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.6.20"
git2 = "0.18.1"
openai = "1.0.0-alpha.13"
qdrant-client = "1.7.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.2"
tokio = "1.28.2"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v5"] }
