[package]
name = "spellbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
dotenv = "0.15.0"
git2 = "0.18.1"
http = "1.0.0"
openai = "1.0.0-alpha.13"
qdrant-client = "1.7.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v5"] }
