[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
web-sys = { version = "0.3.66", features = ["HtmlInputElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0.111"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.89"
gloo-utils = "0.2.0"
serde-wasm-bindgen = "0.6.3"

